quorum/test/tests/TypeChecker/Pass/TextIsEmpty.quorum
class Main
    action Main
        Text t 
        t:SetValue("")
        text p = ""

        print t:IsEmpty()
        print p:IsEmpty()
    end
end