quorum/test/tests/TypeChecker/Fail/ImpAssignIntegerTextObjWrapped.quorum
class main
    action main
        Text t
        t:setValue("t")
        integer i = t;
    end
end